--- a/index.html
+++ b/index.html
@@ -363,13 +363,48 @@
                 </div>
                 <div class="col-3">
                     <h5>Galery</h5>
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="img-foot">
+                                <img class="img-fluid" src="images/r1.jpg" alt="">
+                                <img class="img-fluid" src="images/r2.jpg" alt="">
+                                <img class="img-fluid" src="images/r3.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="img-foot">
+                                <img class="img-fluid" src="images/r5.jpg" alt="">
+                                <img class="img-fluid" src="images/r7.jpg" alt="">
+                                <img class="img-fluid" src="images/r8.jpg" alt="">
+                            </div>
+                            
+                        </div>
+                    </div>
                 </div>
                 <div class="col-3">
                     <h5>Contacts Us</h5>
+                    <div class="info">
+                        <i class="fa fa-address-card" aria-hidden="true"></i>
+                        <span>Head Office</span> 
+                        <p>123,Main Street</p>
+                    </div>
+                    <div class="info">
+                        <i class="fa fa-phone" aria-hidden="true"></i>
+                        <span>Head Office</span> 
+                        <p>+123 456 7890</p>
+                        <p>+123 456 7890</p>
+                    </div>
+                    <div class="info">
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                        <span>Head Office</span> 
+                        <p>123,Main Street</p>
+                    </div>
                 </div>
             </div>
         </div>
     </footer>
+    <p class="copy">Copyright ©2019 All rights reserved | This template is made with <i class="fa fa-heart"></i> by Colorlib</p>
+
 
     <!--Jquery-->
     <script src="js/jquery.js"></script>
