--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
     <section id="presentation">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-4 none">
+                <div class="col-xs-12 col-sm-12 col-md-4 col-xl-4 none">
                     <div class="blue_side">
                         <img class="img-fluid" src="images/home/hero-banner.png">
                     </div>
                 </div>
-                <div class="col-8" style="display: flex;justify-content: center;align-items: center;">
+                <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8" style="display: flex;justify-content: center;align-items: center;">
                     <div class="main-title">
                         <h4>Shop is fun</h4>
                         <h1>BROWSE OUR <br> PREMIUM <br> PRODUCT</h1>
@@ -89,13 +89,13 @@
     <section id="exposition">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-4">
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                     <img class="img-fluid" src="images/home/hero-slide1.png" alt="">
                 </div>
-                <div class="col-4">
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                     <img class="img-fluid" src="images/home/hero-slide2.png" alt="">
                 </div>
-                <div class="col-4">
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                     <img class="img-fluid" src="images/home/hero-slide3.png" alt="">
                 </div>
             </div>
@@ -108,7 +108,7 @@
             <span>Popular Item in the market</span>
             <h2 class="pb-3">Trending <span class="wow">Products</span></h2>
             <div class="row">
-                <div class="col-3">
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                     <div class="text-center">
                         <img class="img-fluid" src="images/product/product1.png" alt="">
                     </div>
@@ -119,7 +119,7 @@
                     <p>$150.00</p>
                 </div>
 
-                <div class="col-3">
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                     <div class="text-center">
                         <img class="img-fluid" src="images/product/product2.png" alt="">
                     </div>
@@ -130,7 +130,7 @@
                     <p>$150.00</p>
                 </div>
 
-                <div class="col-3">
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                     <div class="text-center">
                         <img class="img-fluid" src="images/product/product3.png" alt="">
                     </div>
@@ -141,7 +141,7 @@
                     <p>$150.00</p>
                 </div>
 
-                <div class="col-3">
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                     <div class="text-center">
                         <img class="img-fluid" src="images/product/product4.png" alt="">
                     </div>
@@ -152,7 +152,7 @@
                     <p>$150.00</p>
                 </div>
 
-                <div class="col-3">
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                     <div class="text-center">
                         <img class="img-fluid" src="images/product/product5.png" alt="">
                     </div>
@@ -163,7 +163,7 @@
                     <p>$150.00</p>
                 </div>
 
-                <div class="col-3">
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                     <div class="text-center">
                         <img class="img-fluid" src="images/product/product6.png" alt="">
                     </div>
@@ -174,7 +174,7 @@
                     <p>$150.00</p>
                 </div>
 
-                <div class="col-3">
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                     <div class="text-center">
                         <img class="img-fluid" src="images/product/product7.png" alt="">
                     </div>
@@ -185,7 +185,7 @@
                     <p>$150.00</p>
                 </div>
 
-                <div class="col-3">
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                     <div class="text-center">
                         <img class="img-fluid" src="images/product/product8.png" alt="">
                     </div>
@@ -201,10 +201,10 @@
 
     <!--Promo-->
     <section id="promo">
-        <div style="background: url('images/home/parallax-bg.png') no-repeat center;background-size: cover;padding: 120px;">
+        <div class="promo-card" style="">
             <div class="container">
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                         <h1>Up To 50% Off</h1>
                         <h3>Winter Sale</h3>
                         <p>Him she'd let them sixth saw light</p>
@@ -214,7 +214,6 @@
                     </div>
                 </div>
             </div>
-            
         </div>
     </section>
 
@@ -263,14 +262,14 @@
             <span>Popular item in the market</span>
             <h2 class="pb-3">Latest <span class="wow">News</span></h2>
             <div class="row">
-                <div class="col-4">
+                <div class="col-xs-12 col-sm-12 col-md-4 col-xl-4">
                     <div class="card-info">
                         <img class="img-fluid" src="images/blog/blog1.png" alt="">
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                 <p>By Admin</p>
                             </div>
-                            <div class="col-6">
+                            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                 <p> <i class="fa fa-comment" aria-hidden="true"></i> 2 Comments</p>
                             </div>
                         </div>
@@ -280,14 +279,14 @@
                     </div>
                 </div>
 
-                <div class="col-4">
+                <div class="col-xs-12 col-sm-12 col-md-4 col-xl-4">
                     <div class="card-info">
                         <img class="img-fluid" src="images/blog/blog2.png" alt="">
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                 <p>By Admin</p>
                             </div>
-                            <div class="col-6">
+                            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                 <p> <i class="fa fa-comment" aria-hidden="true"></i> 2 Comments</p>
                             </div>
                         </div>
@@ -297,14 +296,14 @@
                     </div>
                 </div>
 
-                <div class="col-4">
+                <div class="col-xs-12 col-sm-12 col-md-4 col-xl-4">
                     <div class="card-info">
                         <img class="img-fluid" src="images/blog/blog3.png" alt="">
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                 <p>By Admin</p>
                             </div>
-                            <div class="col-6">
+                            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                 <p> <i class="fa fa-comment" aria-hidden="true"></i> 2 Comments</p>
                             </div>
                         </div>
@@ -322,16 +321,16 @@
         <div class="container">
             <div class="card_form">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-xl-12">
                         <div class="update_content">
                             <h1>GET UPDATE FROM ANYWHERE</h1>
                             <p>Bearing Void gathering light light his eavening unto dont afraid</p>
                             <form action="">
                                 <div class="row">
-                                    <div class="col-10">
+                                    <div class="col-xs-12 col-sm-12 col-md-10 col-xl-10">
                                         <input type="text" name="" placeholder="Your Email Adress">
                                     </div>
-                                    <div class="col-2">
+                                    <div class="col-xs-12 col-sm-12 col-md-2 col-xl-">
                                         <button type="" class="btn_update">Subscribe Now</button>
                                     </div>
                                 </div>
@@ -346,11 +345,11 @@
     <footer id="footer">
         <div class="container">
             <div class="row">
-                <div class="col-3">
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                     <h4>Our Mission</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quod neque sit, aut sed architecto exercitationem blanditiis dolorem dolores alias in necessitatibus quae cupiditate molestiae dicta vitae corrupti adipisci labore?</p>
                 </div>
-                <div class="col-3">
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                     <h5>Quick Link</h5>
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -361,17 +360,17 @@
                         <li><a href="#">Contacts</a></li>
                     </ul>
                 </div>
-                <div class="col-3">
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                     <h5>Galery</h5>
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                             <div class="img-foot">
                                 <img class="img-fluid" src="images/r1.jpg" alt="">
                                 <img class="img-fluid" src="images/r2.jpg" alt="">
                                 <img class="img-fluid" src="images/r3.jpg" alt="">
                             </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                             <div class="img-foot">
                                 <img class="img-fluid" src="images/r5.jpg" alt="">
                                 <img class="img-fluid" src="images/r7.jpg" alt="">
@@ -381,7 +380,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                     <h5>Contacts Us</h5>
                     <div class="info">
                         <i class="fa fa-address-card" aria-hidden="true"></i>
