--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
     <section id="exposition">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
                     <img class="img-fluid" src="images/home/hero-slide1.png" alt="">
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
                     <img class="img-fluid" src="images/home/hero-slide2.png" alt="">
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
                     <img class="img-fluid" src="images/home/hero-slide3.png" alt="">
                 </div>
             </div>
@@ -108,7 +108,7 @@
             <span>Popular Item in the market</span>
             <h2 class="pb-3">Trending <span class="wow">Products</span></h2>
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
                     <div class="text-center">
                         <img class="img-fluid" src="images/product/product1.png" alt="">
                     </div>
@@ -119,7 +119,7 @@
                     <p>$150.00</p>
                 </div>
 
-                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
                     <div class="text-center">
                         <img class="img-fluid" src="images/product/product2.png" alt="">
                     </div>
@@ -130,7 +130,7 @@
                     <p>$150.00</p>
                 </div>
 
-                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
                     <div class="text-center">
                         <img class="img-fluid" src="images/product/product3.png" alt="">
                     </div>
@@ -141,7 +141,7 @@
                     <p>$150.00</p>
                 </div>
 
-                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
                     <div class="text-center">
                         <img class="img-fluid" src="images/product/product4.png" alt="">
                     </div>
@@ -152,7 +152,7 @@
                     <p>$150.00</p>
                 </div>
 
-                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
                     <div class="text-center">
                         <img class="img-fluid" src="images/product/product5.png" alt="">
                     </div>
@@ -163,7 +163,7 @@
                     <p>$150.00</p>
                 </div>
 
-                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
                     <div class="text-center">
                         <img class="img-fluid" src="images/product/product6.png" alt="">
                     </div>
@@ -174,7 +174,7 @@
                     <p>$150.00</p>
                 </div>
 
-                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
                     <div class="text-center">
                         <img class="img-fluid" src="images/product/product7.png" alt="">
                     </div>
@@ -185,7 +185,7 @@
                     <p>$150.00</p>
                 </div>
 
-                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
                     <div class="text-center">
                         <img class="img-fluid" src="images/product/product8.png" alt="">
                     </div>
@@ -201,7 +201,7 @@
 
     <!--Promo-->
     <section id="promo">
-        <div class="promo-card" style="">
+        <div class="promo-card">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
