--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             </nav>
         </div>
     </header>
+    <br><br><br><br>
     <!--presentation-->
     <section id="presentation">
         <div class="container-fluid">
@@ -270,12 +271,14 @@
                                 <p>By Admin</p>
                             </div>
                             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                <p> <i class="fa fa-comment" aria-hidden="true"></i> 2 Comments</p>
+                                <p>2 Comments <i class="fa fa-comment" aria-hidden="true"></i></p>
                             </div>
                         </div>
-                        <a href="#" class="btn_more">The Richland Center Shooping News and weekly shooper</a>
-                        <p>Let one fifth i bring fly to divided face for bearing divide unto seed. Winged divided light Forth.</p>
-                        <a href="#" class="btn_more">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                        <div class="news-info">
+                            <a href="#" class="btn_more">The Richland Center Shooping News and weekly shooper</a>
+                            <p>Let one fifth i bring fly to divided face for bearing divide unto seed. Winged divided light Forth.</p>
+                            <a href="#" class="btn_more">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                        </div>
                     </div>
                 </div>
 
@@ -287,12 +290,14 @@
                                 <p>By Admin</p>
                             </div>
                             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                <p> <i class="fa fa-comment" aria-hidden="true"></i> 2 Comments</p>
+                                <p>  2 Comments <i class="fa fa-comment" aria-hidden="true"></i></p>
                             </div>
                         </div>
-                        <a href="#" class="btn_more">The Richland Center Shooping News and weekly shooper</a>
-                        <p>Let one fifth i bring fly to divided face for bearing divide unto seed. Winged divided light Forth.</p>
-                        <a href="#" class="btn_more">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                        <div class="news-info">
+                            <a href="#" class="btn_more">The Richland Center Shooping News and weekly shooper</a>
+                            <p>Let one fifth i bring fly to divided face for bearing divide unto seed. Winged divided light Forth.</p>
+                            <a href="#" class="btn_more">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                        </div>
                     </div>
                 </div>
 
@@ -304,12 +309,14 @@
                                 <p>By Admin</p>
                             </div>
                             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                <p> <i class="fa fa-comment" aria-hidden="true"></i> 2 Comments</p>
+                                <p> 2 Comments <i class="fa fa-comment" aria-hidden="true"></i></p>
                             </div>
                         </div>
-                        <a href="#" class="btn_more">The Richland Center Shooping News and weekly shooper</a>
-                        <p>Let one fifth i bring fly to divided face for bearing divide unto seed. Winged divided light Forth.</p>
-                        <a href="#" class="btn_more">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                        <div class="news-info">
+                            <a href="#" class="btn_more">The Richland Center Shooping News and weekly shooper</a>
+                            <p>Let one fifth i bring fly to divided face for bearing divide unto seed. Winged divided light Forth.</p>
+                            <a href="#" class="btn_more">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
