--- a/index.html
+++ b/index.html
@@ -21,11 +21,6 @@
     <header>
         <div class="container">
             <nav class="navbar navbar-expand-md no-gutters">
-                <div class="col-3 text-left">
-                    <a href="#">
-                    <img src="images/logo.png" height="30" alt="image">
-                    </a>
-                </div>
             
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse-4" aria-controls="navbarNav15" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -34,10 +29,10 @@
                 <div class="collapse navbar-collapse navbar-collapse-4 justify-content-center col-md-6" id="navbarNav15">
                     <ul class="navbar-nav justify-content-center">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#">Accueil<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Shop</a>
+                        <a class="nav-link" href="#">Achat</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Blog</a>
@@ -59,7 +54,7 @@
                         </li>
                     </ul>
             
-                    <a class="btn_login ml-md-3" href="#">Buy Now</a>
+                    <a class="btn_login ml-md-3" href="#">Acheter maintenant</a>
                 </div>
             </nav>
         </div>
@@ -76,10 +71,10 @@
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8" style="display: flex;justify-content: center;align-items: center;">
                     <div class="main-title">
-                        <h4>Shop is fun</h4>
-                        <h1>BROWSE OUR <br> PREMIUM <br> PRODUCT</h1>
-                        <p>Us which over of signs divide dominion deep fill bring they're meat beho upon own earth without morning over third. Their male dry. They are great appear whose land fly grass.</p>
-                        <a href="#" class="btn_main">Browse Now</a>
+                        <h4>Yves Kouadio</h4>
+                        <h1>FREE  <br> TEMPLATE <br> PRODUCT</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia sunt assumenda nostrum? Ducimus possimus voluptates eveniet numquam odit officiis, voluptatibus id molestias recusandae placeat doloribus repudiandae molestiae rem rerum est!</p>
+                        <a href="#" class="btn_main">Lorem ipsum</a>
                     </div>
                 </div>
             </div>
@@ -388,28 +383,17 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
-                    <h5>Contacts Us</h5>
-                    <div class="info">
-                        <i class="fa fa-address-card" aria-hidden="true"></i>
-                        <span>Head Office</span> 
-                        <p>123,Main Street</p>
-                    </div>
+                    <h5>Mes Contacts</h5>
                     <div class="info">
                         <i class="fa fa-phone" aria-hidden="true"></i>
-                        <span>Head Office</span> 
-                        <p>+123 456 7890</p>
-                        <p>+123 456 7890</p>
-                    </div>
-                    <div class="info">
-                        <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <span>Head Office</span> 
-                        <p>123,Main Street</p>
+                        <p>+225 88358955</p>
+                        <p>+225 42299321</p>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
-    <p class="copy">Copyright ©2019 All rights reserved | This template is made with <i class="fa fa-heart"></i> by Colorlib</p>
+    <p class="copy">Ce template à été fait par Yves Kouadio</p>
 
 
     <!--Jquery-->
